<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_CleaningProcessStateWait" Id="{280bc719-01e7-4337-9341-5deff0a4f970}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CleaningProcessStateWait EXTENDS FB_CleaningProcessStateBase
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="mDevOpDone" Id="{1458733e-ab37-40ce-98a4-cff8896f400a}">
      <Declaration><![CDATA[METHOD mDevOpDone : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[I_ParentCallback.mChangeState(EN_Cleaning_State.Production);]]></ST>
      </Implementation>
    </Method>
    <Method Name="mService" Id="{10f00941-723d-44ab-94a9-58d362100434}">
      <Declaration><![CDATA[METHOD mService : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Switch to service mode
IF NOT bL_DevOpActive THEN
	I_ParentCallback.mChangeState(EN_Cleaning_State.Service);
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="mStateAction" Id="{dc72ff24-0b42-4e8f-9512-7f542eac3971}">
      <Declaration><![CDATA[METHOD mStateAction
VAR_INPUT
END_VAR

VAR
	sL_DeviceStatus: ST_CLEANING_DEV_STATUS;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[sL_DeviceStatus := I_ParentCallback.pDeviceStatus;

//If MachineReady go to production mode
IF I_MachineStatus.pSafetyOk AND NOT bL_DevOpActive THEN
	IF I_MachineStatus.pMachineReady THEN
		bL_DevOpActive := I_ParentCallback.mSetMode(EN_CLEANING_OP.eOPGOTOPROD);
	END_IF
END_IF

IF bL_DevOpActive THEN
	mDevOp();	
END_IF

//If error go to error mode
IF sL_DeviceStatus.bError THEN
	I_ParentCallback.mChangeState(EN_Cleaning_State.Error);
END_IF
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_CleaningProcessStateWait">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_CleaningProcessStateWait.mDevOpDone">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_CleaningProcessStateWait.mService">
      <LineId Id="6" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_CleaningProcessStateWait.mStateAction">
      <LineId Id="34" Count="16" />
      <LineId Id="8" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>